# playsv

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  longrun.yml  rust.yml
client/: Cargo.toml  build.rs  index.html
client/src/: app.rs  asset.rs  basesys.rs  jsif.rs  main.rs  mainapp.rs  mjsys.rs  net.rs  testmode.rs
client/src/asset/: LICENSE
common/: Cargo.toml
common/src/: lib.rs  mjsys.rs
common/src/mjsys/: yaku.rs
docs/: client.js  client_bg.wasm  index.html
game/: Cargo.toml
game/src/: jsif.rs  lib.rs  mjsys.rs
game/src/mjsys/: shanten.rs  yaku.rs
game/testres/: LICENSE
playsv/: Cargo.toml  build.rs
playsv/src/: jsif.rs  main.rs  mj.rs  mjgame.rs  mjsys.rs  server.rs
testgui/: Cargo.toml
testgui/src/: main.rs
