[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
anyhow = "1.0.75"
console_error_panic_hook = "0.1.7"
getopts = "0.2.21"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Performance",
    "Document",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "XmlHttpRequest",
]}
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }

[build-dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
glob = "0.3.1"
