[package]
name = "playsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-version = "0.3.5"
actix-web = "3.3.2"
serde = "1.0.130"
serde_json = "1.0.68"
rand = "0.8.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
