[package]
name = "playsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
git-version = "0.3.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
actix-web = "4.4.0"
actix-cors = "0.6.4"
